data/derived/comb/progs/unify/prog3733.ml.out
Characters 16-18:
  let _ = [(1,2); ()];;
                  ^^
Error: This expression has type unit but an expression was expected of type
         int * int
